# bodegas

./: .env.example  .gitignore  app.py  build_page.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
data/: bodegas.db  seeds.json
data/exports/: accounts.csv  graph_data.json  index.html  network.gexf  network.html
data/templates/: relationships.csv  tweets.csv
src/bodegas/: cli.py  config.py
src/bodegas/collector/: api_client.py  attack_search.py  browser_scraper.py  csv_importer.py  tasks.py
src/bodegas/db/: models.py  session.py
src/bodegas/detection/: content.py  features.py  heuristics.py  ml_model.py  temporal.py
src/bodegas/graph/: builder.py  communities.py  metrics.py
src/bodegas/viz/: dashboard.py  gephi_export.py  pyvis_export.py
